--- a/basic/src/main/resources/templates/member/memberDetail.html
+++ b/basic/src/main/resources/templates/member/memberDetail.html
@@ -31,10 +31,32 @@
         .btn {
             display: inline-block; /* 버튼을 인라인 블록으로 설정 */
         }
+        .navbar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: #f8f9fa;
+            padding: 10px 0;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .navbar a {
+            margin-right: 15px;
+            text-decoration: none;
+            color: black;
+        }
+        .navbar .container {
+            display: flex;
+            justify-content: flex-end;
+        }
     </style>
 </head>
 <body>
-
+    <div class="navbar">
+        <div class="container">
+            <div th:replace="member/header :: headerFragment"></div>
+        </div>
+    </div>
+    <br>
     <div class="container">
         <div class="page-header"><h3>🙂 Member Detail</h3></div>
 
