--- a/basic/src/main/resources/templates/member/createMember.html
+++ b/basic/src/main/resources/templates/member/createMember.html
@@ -31,38 +31,61 @@
         .btn {
             display: inline-block; /* 버튼을 인라인 블록으로 설정 */
         }
+        .navbar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: #f8f9fa;
+            padding: 10px 0;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .navbar a {
+            margin-right: 15px;
+            text-decoration: none;
+            color: black;
+        }
+        .navbar .container {
+            display: flex;
+            justify-content: flex-end;
+        }
     </style>
 </head>
 <body>
-<form action="http://localhost:8080/member/create" method="post" enctype="application/x-www-form-urlencoded">
-    <div class="container">
-        <div class="page-header"><h3>🙂 Create Member </h3></div>
-
-        <table class="table">
-            <tbody id="tby">
-            <tr>
-                <td><label for="id">id</label></td>
-                <td><input type="text" id="id" class="form-control" name="id" size="20" maxlength="30"></td>
-            </tr>
-            <tr>
-                <td><label for="name">name</label></td>
-                <td><input type="text" id="name" class="form-control" name="name" placeholder="이름을 입력하세요." size="20" maxlength="30"></td>
-            </tr>
-            <tr>
-                <td><label for="email">email</label></td>
-                <td><input type="email" id="email" class="form-control" name="email" placeholder="이메일을 입력하세요." size="20" maxlength="30"></td>
-            </tr>
-            <tr>
-                <td><label for="password">password</label></td>
-                <td><input type="password" id="password" class="form-control" name="password" placeholder="비밀번호를 입력하세요." size="20" maxlength="30"></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="float-end">
-            <button type="submit" class="btn btn-success">SUBMIT</button>
+    <div class="navbar">
+        <div class="container">
+            <div th:replace="member/header :: headerFragment"></div>
         </div>
     </div>
-</form>
+    <br>
+    <form action="http://localhost:8080/member/create" method="post" enctype="application/x-www-form-urlencoded">
+        <div class="container">
+            <div class="page-header"><h3>🙂 Create Member </h3></div>
+
+            <table class="table">
+                <tbody id="tby">
+<!--                <tr>-->
+<!--                    <td><label for="id">id</label></td>-->
+<!--                    <td><input type="text" id="id" class="form-control" name="id" size="20" maxlength="30"></td>-->
+<!--                </tr>-->
+                <tr>
+                    <td><label for="name">name</label></td>
+                    <td><input type="text" id="name" class="form-control" name="name" placeholder="이름을 입력하세요." size="20" maxlength="30"></td>
+                </tr>
+                <tr>
+                    <td><label for="email">email</label></td>
+                    <td><input type="email" id="email" class="form-control" name="email" placeholder="이메일을 입력하세요." size="20" maxlength="30"></td>
+                </tr>
+                <tr>
+                    <td><label for="password">password</label></td>
+                    <td><input type="password" id="password" class="form-control" name="password" placeholder="비밀번호를 입력하세요." size="20" maxlength="30"></td>
+                </tr>
+                </tbody>
+            </table>
+            <div class="float-end">
+                <button type="submit" class="btn btn-success">SUBMIT</button>
+            </div>
+        </div>
+    </form>
 
 </body>
 </html>
