--- a/basic/src/main/resources/templates/member/memberDetail.html
+++ b/basic/src/main/resources/templates/member/memberDetail.html
@@ -78,6 +78,10 @@
                     <td>password</td>
                     <td><span th:text="${memberDto.password}"></span></td>
                 </tr>
+                <tr>
+                    <td>가입 일시</td>
+                    <td><span th:text="${memberDto.dateTime}"></span></td>
+                </tr>
             </tbody>
         </table>
     </div>
