--- a/board/src/main/resources/templates/author/author_register.html
+++ b/board/src/main/resources/templates/author/author_register.html
@@ -10,7 +10,7 @@
     <div th:replace="common/header :: headerFragment"></div>
     <div style="margin-left: 25%; margin-right: 25%;">
         <br>
-        <h3 style="text-align: center;">✏️회원 가입 </h3>
+        <h3 style="text-align: center;">🙂 Join in </h3>
         <form action="/author/create" method="post" enctype="application/x-www-form-urlencoded">
             <div class="form-group">
                 <label for="name">Name</label>
