--- a/board/src/main/resources/templates/author/author_details.html
+++ b/board/src/main/resources/templates/author/author_details.html
@@ -5,45 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Author Service</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <style>
+        #update-form{
+            display: none;
+        }
+    </style>
 </head>
 <body>
-<div th:replace="common/header :: headerFragment"></div>
-<div class="container" style="text-align: center;">
-    <br>
-    <div class="page-header"><h3>🙂 Author Detail </h3></div>
+    <div th:replace="common/header :: headerFragment"></div>
+    <div class="container" style="text-align: center;">
+        <br>
+        <div class="page-header"><h3>🙂 Author Detail </h3></div>
 
-    <table class="table" style="padding-top: 50px;">
-        <tbody>
-        <tr>
-            <td>Id</td>
-            <td th:text="${author.id}"></td>
-        </tr>
-        <tr>
-            <td>Name</td>
-            <td th:text="${author.name}"></td>
-        </tr>
-        <tr>
-            <td>Email</td>
-            <td th:text="${author.email}"></td>
-        </tr>
-        <tr>
-            <td>Password</td>
-            <td th:text="${author.password}"></td>
-        </tr>
-        <tr>
-            <td>Role</td>
-            <td th:text="${author.role}"></td>
-        </tr>
-        <tr>
-            <td>작성글 수</td>
-            <td th:text="${author.postCounts}"></td>
-        </tr>
-        <tr>
-            <td>가입 일시</td>
-            <td th:text="${author.createdTime}"></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+        <table class="table" style="padding-top: 50px;">
+            <tbody>
+            <tr>
+                <td>Id</td>
+                <td th:text="${author.id}"></td>
+            </tr>
+            <tr>
+                <td>Name</td>
+                <td th:text="${author.name}"></td>
+            </tr>
+            <tr>
+                <td>Email</td>
+                <td th:text="${author.email}"></td>
+            </tr>
+            <tr>
+                <td>Password</td>
+                <td th:text="${author.password}"></td>
+            </tr>
+            <tr>
+                <td>Role</td>
+                <td th:text="${author.role}"></td>
+            </tr>
+            <tr>
+                <td>작성글 수</td>
+                <td th:text="${author.postCounts}"></td>
+            </tr>
+            <tr>
+                <td>가입 일시</td>
+                <td th:text="${author.createdTime}"></td>
+            </tr>
+            </tbody>
+        </table>
+        <div>
+            <div class="pull-right float-end">
+                <a class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#editModal">수정</a>
+                <a th:href="@{/author/delete/{id}(id=${author.id})}" class="btn btn-success">삭제</a>
+            </div>
+        </div>
+        <br>
+    </div>
+    <br>
+
+    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editModalLabel">회원 정보 수정</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="editForm" th:action="@{/author/update/{id}(id=${author.id})}" method="post">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="name" name="name" th:value="${author.name}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="password" name="password" th:value="${author.password}">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                    <button type="button" onclick="submitForm()" class="btn btn-primary">저장</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        function submitForm(){
+            document.getElementById("editForm").submit();
+        }
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
