--- a/board/src/main/resources/templates/post/post_list.html
+++ b/board/src/main/resources/templates/post/post_list.html
@@ -3,35 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Author Service</title>
+    <title>Post Service</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
     <div th:replace="common/header :: headerFragment"></div>
     <div class="container" style="text-align: center; padding-top: 30px;">
-        <div class="page-header"><h3>🙂 Author List</h3></div>
+        <div class="page-header"><h3>🙂 Post List</h3></div>
+        <div class="float-end">
+            <a href="/post/create" >
+                <button type="submit" class="btn btn-success">
+                    글쓰기
+                </button>
+            </a>
+        </div>
 
-        <br>
         <table class="table">
             <thead>
                 <tr>
                     <th>Id</th>
-                    <th>Name</th>
+                    <th>Title</th>
                     <th>Email</th>
                 </tr>
             </thead>
             <tbody id="bodyData">
-                <tr th:each="author: ${authorList}">
+                <tr th:each="post: ${postList}">
                     <td>
-                        <a th:text="${author.id}" th:href="@{/author/detail/{id}(id=${author.id})}">1</a>
+                        <a th:text="${post.id}" th:href="@{/post/detail/{id}(id=${post.id})}">1</a>
                     </td>
-                    <td th:text="${author.name}"></td>
-                    <td th:text="${author.email}"></td>
+                    <td th:text="${post.title}"></td>
+                    <td th:text="${post.author_email}"></td>
                 </tr>
             </tbody>
         </table>
     </div>
-
 </body>
 </html>
 
