--- a/board/src/main/resources/templates/common/header.html
+++ b/board/src/main/resources/templates/common/header.html
@@ -9,7 +9,7 @@
     <body>
         <div th:fragment="headerFragment">
             <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-                <a href="" class="navbar-brand mx-auto"> 🏠Home Page </a>
+                <a href="/" class="navbar-brand mx-auto"> 🏠Home Page </a>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a href="/author/list" target="_parent" class="nav-link">회원 목록</a>
