--- a/board/src/main/resources/templates/common/header.html
+++ b/board/src/main/resources/templates/common/header.html
@@ -11,7 +11,7 @@
             <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
                 <a href="/" class="navbar-brand mx-auto"> 🏠Home Page </a>
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
                         <a href="/author/list" target="_parent" class="nav-link">회원 목록</a>
                     </li>
                     <li class="nav-item">
